==> Niugge/PX4Firmware/NuttX/nuttx/arch/arm/src/lpc17xx/lpc17_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "chip/lpc17_syscon.h"
#include "lpc17_gpio.h"
#include "lpc17_adc.h"
#define CONFIG_ADC0_MASK     0x01
#define CONFIG_ADC0_SPS      1000
#define CONFIG_ADC0_AVERAGE  200

static void adc_reset(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;
  irqstate_t flags;
  uint32_t clkdiv;
  uint32_t regval;

  flags = irqsave();

  regval  = getreg32(LPC17_SYSCON_PCONP);
  regval |= SYSCON_PCONP_PCADC;
  putreg32(regval, LPC17_SYSCON_PCONP);

  putreg32(ADC_CR_PDN, LPC17_ADC_CR);

  regval  = getreg32(LPC17_SYSCON_PCLKSEL0);
  regval &= ~SYSCON_PCLKSEL0_ADC_MASK;
  regval |= (SYSCON_PCLKSEL_CCLK8 << SYSCON_PCLKSEL0_ADC_SHIFT);
  putreg32(regval, LPC17_SYSCON_PCLKSEL0);

  clkdiv   = LPC17_CCLK / 8 / 65 / priv->sps;
  clkdiv <<= 8;
  clkdiv  &= 0xff00;
  putreg32(ADC_CR_PDN | ADC_CR_BURST | clkdiv | priv->mask, LPC17_ADC_CR);

  if ((priv->mask & 0x01) != 0)
    {
      lpc17_configgpio(GPIO_AD0p0);
    }
  if ((priv->mask & 0x02) != 0)
    {
      lpc17_configgpio(GPIO_AD0p1);
    }
  if ((priv->mask & 0x04) != 0)
    {
      lpc17_configgpio(GPIO_AD0p2);
    }
  if ((priv->mask & 0x08) != 0)
    {
      lpc17_configgpio(GPIO_AD0p3);
    }
  if ((priv->mask & 0x10) != 0)
    {
      lpc17_configgpio(GPIO_AD0p4);
    }
  if ((priv->mask & 0x20) != 0)
    {
      lpc17_configgpio(GPIO_AD0p5);
    }
  if ((priv->mask & 0x40) != 0)
    {
      lpc17_configgpio(GPIO_AD0p6);
    }
  if ((priv->mask & 0x80) != 0)
    {
      lpc17_configgpio(GPIO_AD0p7);
    }

  irqrestore(flags);
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  /* Disable ADC interrupts, both at the level of the ADC device and at the
   * level of the NVIC.
   */

  putreg32(0, LPC17_ADC_INTEN);
  up_disable_irq(priv->irq);

  /* Then detach the ADC interrupt handler. */

  irq_detach(priv->irq);
}

static void adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  if (enable)
    {
#ifdef CONFIG_ADC_CHANLIST
      /* Trigger interrupt at the end of conversion on the last A/D channel
       * in the channel list.
       */

      putreg32(ADC_INTEN_CHAN(g_adc_chanlist[CONFIG_ADC_NCHANNELS - 1]),
               LPC17_ADC_INTEN);
#else
      /* Trigger interrupt using the global DONE flag. */

      putreg32(ADC_INTEN_GLOBAL, LPC17_ADC_INTEN);
#endif
    }
  else
    {
      putreg32(0, LPC17_ADC_INTEN);
    }
}

static int adc_interrupt(int irq, void *context)
{
#ifdef CONFIG_ADC_CHANLIST

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  uint32_t regval;
  unsigned char ch;
  int32_t value;
  int i;

  regval = getreg32(LPC17_ADC_GDR);
  for (i = 0; i < CONFIG_ADC_NCHANNELS; i++)
    {
      ch     = g_adc_chanlist[i];
      regval = getreg32(LPC17_ADC_DR(ch));

      if (regval&ADC_DR_DONE)
        {
          priv->count[ch]++;
          priv->buf[ch] += regval & 0xfff0;

          if (priv->count[ch] >= CONFIG_ADC0_AVERAGE)
            {
              value           = priv->buf[ch] / priv->count[ch];
              value         <<= 15;
              adc_receive(&g_adcdev,ch,value);
              priv->buf[ch]   = 0;
              priv->count[ch] = 0;
            }
        }
    }

  return OK;

#else

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  uint32_t regval;
  unsigned char ch;
  int32_t value;

  regval              = getreg32(LPC17_ADC_GDR);
  ch                  = (regval >> 24) & 0x07;
  priv->buf[ch]      += regval & 0xfff0;

  priv->count[ch]++;
  if (priv->count[ch] >= CONFIG_ADC0_AVERAGE)
    {
      value           = priv->buf[ch] / priv->count[ch];
      value         <<= 15;
      adc_receive(&g_adcdev,ch,value);
      priv->buf[ch]   = 0;
      priv->count[ch] = 0;
    }

  return OK;

#endif
}

FAR struct adc_dev_s *lpc17_adcinitialize(void)
{
  return &g_adcdev;
}
